--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,8 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <!-- <link rel="manifest" href="manifest.json" /> -->
+
+    <link rel="icon" href="data:,">
     <!--
       frontend/public
       Notice the use of %PUBLIC_URL% in the tags above.
