--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 
-    <link rel="icon" href="data:,">
+    <link rel="shortcut icon" href="#" />
     <!--
       frontend/public
       Notice the use of %PUBLIC_URL% in the tags above.
